refactor FastSellMenu