@@ -2,105 +2,94 @@ package pdf.anime.fastsellcmi.menus;
 
 import com.Zrips.CMI.CMI;
 import com.Zrips.CMI.Modules.Worth.WorthItem;
-import de.tr7zw.changeme.nbtapi.NBT;
-import de.tr7zw.changeme.nbtapi.NBTItem;
-import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.Setter;
-import lombok.experimental.FieldDefaults;
 import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.TextReplacementConfig;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
+import org.bukkit.persistence.PersistentDataContainer;
+import org.bukkit.persistence.PersistentDataType;
 import org.jetbrains.annotations.NotNull;
 import pdf.anime.fastsellcmi.config.ConfigContainer;
 import pdf.anime.fastsellcmi.config.SellMenuConfig;
+import pdf.anime.fastsellcmi.services.PDCService;
+import pdf.anime.fastsellcmi.utils.PlaceholderUtils;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.regex.Pattern;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static com.Zrips.CMI.Modules.Economy.Economy.format;
 
-@FieldDefaults(level = AccessLevel.PRIVATE)
 public class FastSellMenu implements InventoryHolder {
-    final ConfigContainer configContainer;
-    final Inventory inventory;
+    private final ConfigContainer configContainer;
+    private final Inventory inventory;
+
+    private final PDCService pdcService;
 
     @Getter
-    double totalPrice = 0f;
+    private double totalPrice = 0.0;
 
+    @Getter
     @Setter
-    @Getter
-    boolean sold = false;
+    private boolean sold = false;
 
-    public FastSellMenu(ConfigContainer configContainer) {
+    FastSellMenu(ConfigContainer configContainer, PDCService pdcService) {
         this.configContainer = configContainer;
-        this.inventory = Bukkit.createInventory(this, 9 * 6, configContainer.getSellMenuConfig().windowTitle);
-        configure();
+        this.pdcService = pdcService;
+        this.inventory = Bukkit.createInventory(this, configContainer.getSellMenuConfig().inventoryMap.length * 9, configContainer.getSellMenuConfig().windowTitle);
+        configureInventory();
         updateTotalPrice(true);
     }
 
-    public void configure() {
-        String[] inventoryMap = configContainer.getSellMenuConfig().inventoryMap;
-        Map<Character, ItemStack> itemMap = configContainer.getSellMenuConfig().itemMap;
-        Map<Character, String> functionalMap = configContainer.getSellMenuConfig().functionalMap;
-        char[] charString;
+    private void configureInventory() {
+        SellMenuConfig menuConfig = configContainer.getSellMenuConfig();
+        String[] layout = menuConfig.getInventoryMap();
+        Map<Character, ItemStack> itemMap = menuConfig.itemMap;
+        Map<Character, String> functionalMap = menuConfig.functionalMap;
 
-        for (int i = 0; i < inventoryMap.length; i++) {
-            charString = inventoryMap[i].toCharArray();
-            for (int j = 0; j < charString.length; j++) {
-                char code = charString[j];
-                ItemStack itemStack = itemMap.get(code);
-                if (itemStack == null || itemStack.getAmount() == 0 || itemStack.getType() == Material.AIR) {
+        for (int i = 0; i < layout.length; i++) {
+            char[] row = layout[i].toCharArray();
+            for (int j = 0; j < row.length; j++) {
+                char code = row[j];
+                ItemStack sourceItem = itemMap.get(code);
+                if (sourceItem == null || sourceItem.getType() == Material.AIR) {
                     continue;
                 }
 
-                NBT.modify(itemStack, nbt -> {
-                    nbt.setString("button-type", functionalMap.get(code));
-                });
-                inventory.setItem(i * 9 + j, itemStack);
+                ItemStack item = sourceItem.clone(); // Clone to avoid modifying the map's original item
+
+                String buttonType = functionalMap.get(code);
+                item = pdcService.applyButtonType(item, buttonType);
+                inventory.setItem(i * 9 + j, item);
             }
         }
     }
 
-    public void updateTotalPriceButton() {
-        Arrays.stream(inventory.getContents()).filter(Objects::nonNull).filter(itemStack -> {
-            NBTItem nbtItem = new NBTItem(itemStack);
-            String type = nbtItem.getString("button-type");
-            if (type == null || type.isEmpty()) {
-                return false;
-            }
+    private void updatePriceButton() {
+        ItemStack[] contents = inventory.getContents();
+        for (int i = 0; i < contents.length; i++) {
+            ItemStack item = contents[i];
 
-            return type.equals(SellMenuConfig.PRICE_BUTTON_TYPE);
-        }).forEach(itemStack -> itemStack.editMeta(itemMeta -> {
-            Character chr = configContainer.getSellMenuConfig().functionalMap.inverse().get(SellMenuConfig.PRICE_BUTTON_TYPE);
-            if (chr == null) {
-                return;
-            }
+            String buttonType = pdcService.getButtonType(item);
+            if (buttonType == null || !buttonType.equals(SellMenuConfig.PRICE_BUTTON_TYPE)) continue;
 
-            ItemMeta meta = configContainer.getSellMenuConfig().itemMap.get(chr).getItemMeta();
+            Component newName = PlaceholderUtils.replacePlaceholder(
+                    configContainer.getSellMenuConfig().getItemForButtonType(SellMenuConfig.PRICE_BUTTON_TYPE).displayName(),
+                    "{total}",
+                    format(totalPrice)
+            );
 
-            if (meta == null) {
-                return;
-            }
-            Component oldName = meta.displayName();
-            if (oldName == null) {
-                return;
-            }
-
-            itemMeta.displayName(oldName.replaceText(TextReplacementConfig.builder().match(Pattern.compile("\\{total\\}")).replacement(format(totalPrice)).build()).asComponent());
-        }));
+            item.editMeta(itemMeta -> itemMeta.displayName(newName));
+            inventory.setItem(i, item);
+        }
     }
 
     public void updateTotalPrice(boolean updateButton) {
-        totalPrice = 0f;
+        totalPrice = 0.0;
         getItems().forEach(itemStack -> {
             WorthItem worth = CMI.getInstance().getWorthManager().getWorth(itemStack);
             if (worth != null && worth.getSellPrice() > 0) {
@@ -109,49 +98,42 @@ public class FastSellMenu implements InventoryHolder {
         });
 
         if (updateButton) {
-            updateTotalPriceButton();
+            updatePriceButton();
         }
     }
 
     public List<ItemStack> getItems() {
-        return Arrays.stream(inventory.getContents()).filter(Objects::nonNull).filter(itemStack -> {
-            NBTItem nbtItem = new NBTItem(itemStack);
-            String type = nbtItem.getString("button-type");
-            if (type == null || type.isEmpty()) {
-                return true;
+        List<ItemStack> items = new ArrayList<>();
+
+        for (ItemStack item : inventory.getContents()) {
+            if (item == null || item.getType() == Material.AIR) continue;
+
+            ItemMeta meta = item.getItemMeta();
+            if (meta == null) {
+                items.add(item);
+                continue;
             }
 
-            return !type.equals(SellMenuConfig.SELL_BUTTON_TYPE) &&
-                    !type.equals(SellMenuConfig.CANCEL_BUTTON_TYPE) &&
-                    !type.equals(SellMenuConfig.PRICE_BUTTON_TYPE) &&
-                    !type.equals(SellMenuConfig.WALL_BUTTON_TYPE);
-        }).toList();
+            PersistentDataContainer container = meta.getPersistentDataContainer();
+            if (!container.has(pdcService.getButtonTypeKey(), PersistentDataType.STRING)) {
+                items.add(item);
+            }
+        }
+
+        return items;
     }
 
     public List<ItemStack> getUnsellableItems() {
-        return Arrays.stream(inventory.getContents()).filter(Objects::nonNull).filter(itemStack -> {
-            NBTItem nbtItem = new NBTItem(itemStack);
-            if (!nbtItem.hasTag("button-type")) {
-                WorthItem worth = CMI.getInstance().getWorthManager().getWorth(itemStack);
-                return worth == null || worth.getSellPrice() <= 0;
-            }
-
-            return false;
-        }).toList();
+        return getItems().stream()
+                .filter(item -> {
+                    WorthItem worth = CMI.getInstance().getWorthManager().getWorth(item);
+                    return worth == null || worth.getSellPrice() <= 0;
+                })
+                .collect(Collectors.toList());
     }
-
 
     @Override
     public @NotNull Inventory getInventory() {
         return inventory;
-    }
-
-    private <K, V> K getKey(Map<K, V> map, V value) {
-        for (Map.Entry<K, V> entry : map.entrySet()) {
-            if (entry.getValue().equals(value)) {
-                return entry.getKey();
-            }
-        }
-        return null;
     }
 }
